--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
               <div class="myPhoto">
               <img class="나.jpg" src="images/me.jpg">
               <img class="">
-              </div>>
+              </div>
 
-              <div>
-              <>
+         
     </body>
 </html>
